# flappy-canada-goose

flappyCanadaGoose/: CMakeLists.txt  PROPOSAL.md
flappyCanadaGoose/src/: goose.cpp  goose.h  main.cpp  model.cpp  model.h  ui.cpp  ui.h
flappyCanadaGoose/test/: model_test.cpp
